tests/NormalTests/paczka1/fuzzy1/59178559.err
Error in line 4: nvRS S588 348,8
Error in line 5: nvRS A145 18,7
Error in line 19: lwk564ItJA S916 85,9
Error in line 32: lwk564ItJA S588 35,85
Error in line 27: CsoTy73bamB A145 235,2
Error in line 22: lwk564ItJA S688 11,5
Error in line 36: lwk564ItJA S588 57,9
